--- a/views/index.html
+++ b/views/index.html
@@ -2,10 +2,69 @@
 <html>
   <head>
     <title><%= title %></title>
+    <link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.min.css"/>
     <link rel='stylesheet' href='/stylesheets/style.css' />
+      <script type="text/javascript" src="/bower_components/angular/angular.min.js"></script>
+      <script type="text/javascript" src="/javascripts/angular/app.js"></script>
+      <script type="text/javascript" src="/javascripts/angular/controllers.js"></script>
+      <script type="text/javascript" src="/javascripts/angular/directives.js"></script>
+      <script type="text/javascript" src="/javascripts/angular/filters.js"></script>
+      <script type="text/javascript" src="/javascripts/angular/services.js"></script>
   </head>
-  <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
+  <body ng-app="seedApp">
+    <div class="col-md-12" ng-controller="seedCtrl">
+        <div class="jumbotron theme-color text-center">
+            <h1>"Hello World!"</h1>
+            <p>Welcome to <%= title %></p>
+            <div>
+                <a class="btn btn-default" href="https://github.com/JiangInk/angular-express-seed.git">
+                    <span class="glyphicon glyphicon-link"></span>
+                    Github URL
+                </a>
+            </div>
+        </div>
+
+        <div class="panel panel-default" ng-class="{hidden: vm.hidden}">
+            <div class="panel-heading">
+                <h4 class="panel-title">
+                    <span class="glyphicon glyphicon-th-list"></span>
+                    show/hidden
+                    <span class="pull-right">
+                        <span class="glyphicon" ng-class="vm.collapsed?'glyphicon-chevron-down':'glyphicon-chevron-up'" ng-click="vm.collapsed = !vm.collapsed"></span>&nbsp;
+                        <span class="glyphicon glyphicon-remove" ng-click="vm.hidden = true"></span>
+                    </span>
+                </h4>
+            </div>
+            <div class="panel-collapse collapse" ng-class="{in: !vm.collapsed}">
+                <div class="panel-body">
+                    <form class="form-inline margin-change">
+                        <div class="form-group">
+                            <div class="input-group">
+                                <div class="input-group-addon">search</div>
+                                <input type="text" class="form-control" ng-model="query"/>
+                            </div>
+                        </div>
+                        <select class="form-control" ng-model="orderProp">
+                            <option value="number">number</option>
+                            <option value="name">name</option>
+                        </select>
+                    </form>
+                    <ul class="list-group" ng-repeat="list in listData |filter:query |orderBy:orderProp">
+                        <li class="list-group-item">
+                            <h4>
+                                <a class="label label-info" href="{{ list.url }}">{{ list.name }}</a>
+                                <span class="badge">{{ list.number }}</span>
+                            </h4>
+                            <blockquote>
+                                <p>{{ list.content }}</p>
+                            </blockquote>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <span class="btn btn-primary" ng-click="vm.hidden = false" ng-if="vm.hidden">restart show</span>
+    </div>
+
   </body>
 </html>
